--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,6 @@
 [[headers]]
   for = "/*" # you can configure the correct paths here
   [headers.values]
-    access-control-allow-origin = "*" # se
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Headers = "Content-Type"
+    Access-Control-Allow-Methods = "*"
