--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,9 @@
     Access-Control-Allow-Origin = "*"
     Access-Control-Allow-Headers = "Content-Type"
     Access-Control-Allow-Methods = "*"
+
+[[redirects]]
+  from = "/"
+  to = "/.netlify/functions/twikoo"
+  status = 200
+  force = true
